# RobotManipulator

./: .gitignore  Arm_XBOX.vi  CMakeLists.txt  README.md  index.md  test_lib.cpp
3Rmanipulator/: CMakeLists.txt
3Rmanipulator/src/: 3Rmanipulator.cpp  3Rmanipulator.h
3Rmanipulator/src/utilities/: Angle.cpp  Angle.h  Kinematics.cpp  Kinematics.h  Point.cpp  Point.h
